src/css-style.css
.contentSection {
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    grid-auto-rows: minmax(100px, auto);
    padding: 10%;
    gap: 20px;

}
/*
.row{
    grid-column:1/13;
    max-height: 25%;
}
*/
.row2 {
    grid-column: 1/13;
    max-height: 25%;
}

.row3 {
    grid-column: 1/13;
    max-height: 25%;
}

/*
.image-div{
    width:70%;
    height: 100%;
    float: left;
}
*/
#img-one {
    height: 100%;
    width: 100%;
    grid-column: 1/9;
}

.text-div {
    float: right;
    border-style: solid;
    border-radius: 1px;
    border-color: black;
    grid-column: 9/13;
    width: 25%;
    height: 100%;
}


.img-div-op {
    width: 70%;
    height: 100%;
    float: right;
}

#img-one-op {
    height: 100%;
    width: 100%;
    grid-column: 9/13;
}

.image-div-op {
    width: 70%;
    height: 100%;
    float: right;
}

.row-with-margin {
    display: flex;
    align-items: center;
    margin: 20px auto;
}

.image-div {
    height: 100%;
}

.wide-img {
    height: auto;
    max-height: 100%;
    max-width: 100%;
}

.text-div-op {
    float: left;
    border-style: solid;
    border-radius: 1px;
    border-color: black;
    grid-column: 1/4;
    width: 25%;
    height: 100%;
}

